fixed alignment issue in icon

--- a/tetrapak-publicweb/ui.dev/src/source/styles/global/default/en/_themes.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/styles/global/default/en/_themes.scss
@@ -14,7 +14,7 @@
     }
 
   &--regular {
-        margin: $margin-md $margin-md 0 $margin-md;  
+        margin: $margin-md $margin-md 0 $margin-md;
     @media #{$desktop} {
         margin: $margin-xxxl $margin-xxxl 0 $margin-xxxl;
         }
@@ -36,4 +36,18 @@
 
 .tpatom-link--transparent:hover {
     color: $color-jordy-blue;
+}
+
+.icon-Youtube_pw:before {
+	vertical-align: -3px;
+}
+
+.icon-Circle_Arrow_Right_pw,
+.icon-Chevron_Left_pw,
+.icon-Chevron_Right_pw{
+    position: relative;
+    &::before{
+        position: absolute;
+        top: -23px;
+    }
 }
